[package]
name = "fox-editor"
version = "0.5.3"
edition = "2021"
description = "Terminal-based code editor with syntax highlighting"
license = "GPL-3.0-only"

[[bin]]
name = "fox"
path = "src/main.rs"

[dependencies]
crossterm = "0.25.0"
clap = "3.2.17"
owo-colors = "3.4.0"
shellexpand = "2.1.2"
terminal-clipboard = "0.3.1"

# Syntax highlighting
syntect = "4.6"
carbon-dump = "1.2.2"

# Config
toml = "0.5.9"
serde = { version = "1.0.144", features = ["derive"] }
